Refactor the code to deploy to DigitalOcean. Version of Java 11